--- a/diary/templates/base.html
+++ b/diary/templates/base.html
@@ -22,17 +22,17 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="{% url 'diary:index' %}">Private Diary</a>
+                <a class="navbar-brand" href="{% url 'diary:index' %}">Becu</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link{% block active_inquiry %}{% endblock %}" href="#">INQUIRY</a>
+                            <a class="nav-link{% block active_inquiry %}{% endblock %}" href="#">問診票</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#!">Sign Up</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Log In</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">サインアップ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#!">ログイン</a></li>
                     </ul>
                 </div>
             </div>
@@ -42,7 +42,7 @@
 
         <!-- Footer-->
         <footer class="py-5 bg-black">
-            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2022</p></div>
+            <div class="container px-5"><p class="m-0 text-center text-white small">Copyright &copy; Your Website 2023</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
