--- a/diary/templates/index.html
+++ b/diary/templates/index.html
@@ -7,7 +7,9 @@
         <div class="container">
             <h1 class="masthead-heading mb-0">Becu</h1>
             <h2 class="masthead-subheading mb-0">予診票入力サイト</h2>
-            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">LOG IN</a>
+            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">ログイン</a>
+            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">新規会員登録</a>
+
        </div>
     </div>
     <div class="bg-circle-1 bg-circle"></div>
@@ -17,38 +19,6 @@
 </header>
 {% endblock %}
 {% block contents %}
-<section>
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-6 order-lg-2">
-                <div class="p-5">
-                    <img class="img-fluid rounded-circle" src="{% static 'assets/img/bigru.jpg' %}" alt="">
-                </div>
-            </div>
-            <div class="col-lg-6 order-lg-1">
-                <div class="p-5">
-                    <h2 class="display-4">ログイン</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<section>
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-6">
-                <div class="p-5">
-                    <img class="img-fluid rounded-circle" src="{% static 'assets/img/bigru.jpg' %}" alt="">
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="p-5">
-                    <h2 class="display-4">新規会員登録画面</h2>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
 {% endblock %}
 
