--- a/diary/templates/base.html
+++ b/diary/templates/base.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link{% block active_inquiry %}{% endblock %}" href="#">問診票</a>
+                            <a class="nav-link{% block active_inquiry %}{% endblock %}" href="{% url 'diary:inquiry' %}">問診票</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
