--- a/diary/templates/base.html
+++ b/diary/templates/base.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>{% block title %}{% endblock %}</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -15,10 +15,10 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="{% static 'css/one-page-wonder.css' %}" rel="stylesheet" />
         <!-- My style -->
-        <link href="stylesheet" type="text/css" href="{% static 'css/mystyle.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/mystyle.css' %}">
         {% block head %}{% endblock %}
     </head>
-    <body id="wrapper">
+    <div id="wrapper">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link{% block active_inquiry %}{% endblock %}" href="#">問診票</a>
+                            <a class="nav-link{% block active_inquiry %}{% endblock %}" href="{% url 'diary:inquiry' %}">問診票</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
@@ -48,5 +48,5 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
-    </body>
+    </div>
 </html>
