--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -1,3 +1,4 @@
+
 body,#wrapper{
     display: flex;
     flex-direction: column;
@@ -6,4 +7,7 @@ body,#wrapper{
 
 footer{
     margin-top: auto;
+}
+.my-div-style{
+    margin-top: 6rem;
 }
