お問い合わせフォーム　送信できない

--- a/diary/templates/base.html
+++ b/diary/templates/base.html
@@ -31,18 +31,38 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
+                    {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link"  href="{% url 'account_logout' %}">Log out</a>
+                        </li>
+                    {% else %}
                         <li class="nav-item">
                             <a class="nav-link {% block active_signup%}{%endblock %}"
-                        href="{% url 'account_signup' %}">サインアップ</a>
+                        href="{% url 'account_signup' %}">Signup</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% block active_login %}{% endblock %}"
-                               href="{% url 'account_login' %}">ログイン</a></li>
+                               href="{% url 'account_login' %}">Login</a></li>
+                     {% endif %}
                     </ul>
                 </div>
             </div>
         </nav>
         {% block header %}{% endblock %}
+
+    {% if messages %}
+    <div class="container my-div-style">
+        <div class="row">
+            <ul class="messages" style="list-style: none;">
+                {% for message in messages%}
+                <li {% if message.tags %} class="{{ message.tags }}"{% endif %}>
+                {{ message }}
+                </li>
+            {% endfor %}
+            </ul>
+        </div>
+    </div>
+        {% endif %}
         {% block contents %}{% endblock %}
 
         <!-- Footer-->
