--- a/diary/templates/index.html
+++ b/diary/templates/index.html
@@ -7,8 +7,8 @@
         <div class="container">
             <h1 class="masthead-heading mb-0">Becu</h1>
             <h2 class="masthead-subheading mb-0">予診票入力サイト</h2>
-            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">ログイン</a>
-            <a href="#" class="btn btn-primary btn-xl rounded-pill mt-5">新規会員登録</a>
+            <a href="{% url 'account_login' %}" class="btn btn-primary btn-xl rounded-pill mt-5">ログイン</a>
+            <a href="{% url 'account_signup' %}" class="btn btn-primary btn-xl rounded-pill mt-5">新規会員登録</a>
 
        </div>
     </div>
