--- a/diary/templates/inquiry.html
+++ b/diary/templates/inquiry.html
@@ -12,7 +12,7 @@
             {{ form.non_field_errors }}
 
             {% for field in form %}
-            <div class="mb-4 col-8">
+            <div class="mb-4 col-8" id="{{ field.id_for_label }}_div">
                 <label for="{{ field.id_for_label }}" class="form-label">
                     <strong>{{ field.label_tag }}</strong>
                 </label>
@@ -22,6 +22,76 @@
             {% endfor %}
         <button class="btn btn-primary" type="submit">送信</button>
         </form>
+        <script>
+            function butotnClick() {
+
+                if (checkButton.checked) {
+                    setumei.style.display ="block";
+
+                } else {
+                    setumei.style.display ="none";
+                }
+            }
+
+            const setumei = document.getElementById("id_病名を選択してください_div");
+            setumei.style.display ="none";
+            let checkButton = document.getElementById('何らかの持病をもっていますか-id');
+            checkButton.addEventListener('click', butotnClick);
+        </script>
+        <script>
+            function butotnClick2() {
+                if (checkButton1.checked) {
+                    setumei1.style.display ="block";
+
+                } else {
+                    setumei1.style.display ="none";
+                }
+            }
+
+            const setumei1 = document.getElementById("id_その他の病気_div");
+            setumei1.style.display ="none";
+            let checkButton1 = document.getElementById('上記以外の持病をもっていますか-id');
+            checkButton1.addEventListener('click', butotnClick2);
+            </script>
+    　　　　　<script>
+            function butotnClick3() {
+                if (checkButton2.checked) {
+                    setumei2.style.display ="block";
+
+                } else {
+                    setumei2.style.display ="none";
+                }
+            }
+
+            const setumei2 = document.getElementById("id_処方されている薬名を記入してください_div");
+            setumei2.style.display ="none";
+            let checkButton2 = document.getElementById('サラサラにする薬-id');
+            checkButton2.addEventListener('click', butotnClick3);
+            </script>
+    　　　　　<script>
+            function butotnClick4() {
+                if (checkButton3.checked) {
+                    setumei3.style.display ="block";
+
+                } else {
+                    setumei3.style.display ="none";
+                }
+            }
+
+            const setumei3 = document.getElementById("id_その他に処方されている薬名を記入してください_div");
+            setumei3.style.display ="none";
+            let checkButton3 = document.getElementById('その他に処方されている薬-id');
+            checkButton3.addEventListener('click', butotnClick4);
+            </script>
+            <form>
+            <input type="button" value="PDFを開く" onClick="monshin_output.pdf">
+            </form>
+
+            <a href="monshin_output.pdf" target="_blank">PDFを開く</a>
+
+            <img src="open.gif" width="700" height="900" alt="xx" onClick="window.open('monshin_output.pdf')">
+
+
     </div>
 </div>
 {% endblock %}
