ログイン　サインアップできるようになった

--- a/accounts/templates/account/verification_sent.html
+++ b/accounts/templates/account/verification_sent.html
@@ -9,7 +9,8 @@
             <h1>メールアドレスを確認おしてください</h1>
             <div class="mt-5">
                 <p>確認のメールを送信しました。</p>
-                <p>メールに記載されたリンクをクリックして、ユーザー登録を完了させてください。数分持っても確認のメールが届かない場合はご連絡ください。</p>
+                <p>メールに記載されたリンクをクリックして、ユーザー登録を完了させて
+                    ください。数分持っても確認のメールが届かない場合はご連絡ください。</p>
             </div>
         </div>
     </div>
