--- a/accounts/templates/account/signup.html
+++ b/accounts/templates/account/signup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load django_bootstrap5 %}
 
-{% block title %}サインアップ|Private Diary{% endblock %}
+{% block title %}サインアップ|Becu{% endblock %}
 
 {% block active_signup %}active{% endblock %}
 
@@ -12,17 +12,18 @@
             <h1>サインアップ</h1>
             <form method="post" action="{% url 'account_signup' %}">
                 {% csrf_token %}
+
             <div class="mb-4 col-4">
                 {% bootstrap_form form %}
-        </div>
+            </div>
                 {% if redirect_field_value %}
-                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
+                <input type="hidden" name="{{ redirect_field_name }}"
+                       value="{{ redirect_field_value }}"/>
                 {% endif %}
 
                 <button class="btn btn-primary" type="submit">登録</button>
             </form>
         </div>
     </div>
-
 </div>
 {% endblock %}
