パスワードリセットできるようになった

--- a/accounts/templates/account/password_reset_done.html
+++ b/accounts/templates/account/password_reset_done.html
@@ -8,7 +8,7 @@
         <div class="my-div-style">
             <h1>パスワードリセット</h1>
 
-            {% if user.is_aut_henticated %}
+            {% if user.is_authenticated %}
             {% include "account/snippets/alredy_logged_in.html" %}
             {% endif %}
 
